Green_fase3/genI/gram/iParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 gram/i.g 2016-01-19 18:17:25
 package gram; 

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class iParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "Argumento", "ListaArgumentos", "Decl", "ListaDecl", "IntWrap", "SeqInstrucao", "Exp", "Funcao", "Return", "For", "While", "If", "Declaracao", "Atribuicao", "Vazio", "Comentario", "Comentarios", "DVoid", "DFloat", "DBoolean", "DChar", "DInt", "Dec", "Inc", "Empty", "Expressoes", "DEnergia", "Print", "Input", "Comp", "E", "Ou", "Float", "False", "True", "Char", "Int", "Condicional", "IncDepois", "IncAntes", "Call", "Nao", "Neg", "Pos", "Id", "ExpNum", "Sub", "Soma", "Div", "Mult", "Atrib", "Igual", "Dif", "MenorQ", "MaiorQ", "Menor", "Maior", "Mod", "Menos", "Divide", "Vezes", "Mais", "Parametro", "ListaParametros", "INT", "FLOAT", "CHAR", "ID", "COMENTARIO_LINHA", "COMENTARIO_LINHAS", "DIGITO", "SufixoFloat", "LETRA", "WS", "'char'", "'int'", "'boolean'", "'float'", "'void'", "';'", "','", "'='", "'('", "')'", "'if'", "'else'", "'for'", "'while'", "'return'", "'print'", "'energia'", "'input'", "'{'", "'}'", "'?'", "':'", "'||'", "'&&'", "'>'", "'<'", "'>='", "'<='", "'!='", "'=='", "'*='", "'/='", "'+='", "'-='", "'+'", "'-'", "'*'", "'/'", "'%'", "'++'", "'--'", "'!'", "'true'", "'false'"
    };
    public static final int Funcao=17;
    public static final int Ou=41;
    public static final int False=43;
    public static final int Comp=39;
    public static final int Print=37;
    public static final int Atrib=60;
    public static final int COMENTARIO_LINHA=78;
    public static final int ID=77;
    public static final int DVoid=27;
    public static final int Sub=56;
    public static final int LETRA=82;
    public static final int DInt=31;
    public static final int Argumento=10;
    public static final int ListaDecl=13;
    public static final int Float=42;
    public static final int Pos=53;
    public static final int Soma=57;
    public static final int Id=54;
    public static final int T__126=126;
    public static final int If=21;
    public static final int T__125=125;
    public static final int T__127=127;
    public static final int E=40;
    public static final int CHAR=76;
    public static final int DEnergia=36;
    public static final int Char=45;
    public static final int Igual=61;
    public static final int ListaParametros=73;
    public static final int IntWrap=14;
    public static final int Dif=62;
    public static final int Call=50;
    public static final int DChar=30;
    public static final int IncAntes=49;
    public static final int DFloat=28;
    public static final int MenorQ=63;
    public static final int Div=58;
    public static final int Neg=52;
    public static final int Mult=59;
    public static final int Menor=65;
    public static final int Menos=68;
    public static final int Declaracao=22;
    public static final int T__91=91;
    public static final int T__100=100;
    public static final int T__92=92;
    public static final int T__93=93;
    public static final int T__102=102;
    public static final int T__94=94;
    public static final int T__101=101;
    public static final int T__90=90;
    public static final int True=44;
    public static final int Comentarios=26;
    public static final int Divide=69;
    public static final int Input=38;
    public static final int Vezes=70;
    public static final int MaiorQ=64;
    public static final int T__99=99;
    public static final int Vazio=24;
    public static final int T__95=95;
    public static final int T__96=96;
    public static final int T__97=97;
    public static final int T__98=98;
    public static final int DBoolean=29;
    public static final int For=19;
    public static final int Maior=66;
    public static final int Condicional=47;
    public static final int Inc=33;
    public static final int Expressoes=35;
    public static final int T__122=122;
    public static final int T__121=121;
    public static final int T__124=124;
    public static final int FLOAT=75;
    public static final int T__123=123;
    public static final int ExpNum=55;
    public static final int T__120=120;
    public static final int DIGITO=80;
    public static final int Int=46;
    public static final int INT=74;
    public static final int COMENTARIO_LINHAS=79;
    public static final int Empty=34;
    public static final int IncDepois=48;
    public static final int T__119=119;
    public static final int T__118=118;
    public static final int Atribuicao=23;
    public static final int T__115=115;
    public static final int WS=83;
    public static final int EOF=-1;
    public static final int T__114=114;
    public static final int Comentario=25;
    public static final int T__117=117;
    public static final int T__116=116;
    public static final int T__111=111;
    public static final int T__110=110;
    public static final int T__113=113;
    public static final int Dec=32;
    public static final int Return=18;
    public static final int Mod=67;
    public static final int T__112=112;
    public static final int Parametro=72;
    public static final int Decl=12;
    public static final int While=20;
    public static final int ListaArgumentos=11;
    public static final int SeqInstrucao=15;
    public static final int T__88=88;
    public static final int T__108=108;
    public static final int T__89=89;
    public static final int T__107=107;
    public static final int SufixoFloat=81;
    public static final int Mais=71;
    public static final int T__109=109;
    public static final int Exp=16;
    public static final int T__84=84;
    public static final int T__104=104;
    public static final int Nao=51;
    public static final int T__85=85;
    public static final int T__103=103;
    public static final int T__86=86;
    public static final int T__106=106;
    public static final int T__87=87;
    public static final int T__105=105;

    // delegates
    // delegators


        public iParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public iParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return iParser.tokenNames; }
    public String getGrammarFileName() { return "gram/i.g"; }


    public static class idTipo_return extends ParserRuleReturnScope {
        Tree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "idTipo"
    // gram/i.g:15:1: idTipo : ( 'char' -> ^( DChar ) | 'int' -> ^( DInt ) | 'boolean' -> ^( DBoolean ) | 'float' -> ^( DFloat ) | 'void' -> ^( DVoid ) ) ;
    public final iParser.idTipo_return idTipo() throws RecognitionException {
        iParser.idTipo_return retval = new iParser.idTipo_return();
        retval.start = input.LT(1);

        Tree root_0 = null;

        Token string_literal1=null;
        Token string_literal2=null;
        Token string_literal3=null;
        Token string_literal4=null;
        Token string_literal5=null;

        Tree string_literal1_tree=null;
        Tree string_literal2_tree=null;
        Tree string_literal3_tree=null;
        Tree string_literal4_tree=null;
        Tree string_literal5_tree=null;
        RewriteRuleTokenStream stream_88=new RewriteRuleTokenStream(adaptor,"token 88");
        RewriteRuleTokenStream stream_84=new RewriteRuleTokenStream(adaptor,"token 84");
        RewriteRuleTokenStream stream_85=new RewriteRuleTokenStream(adaptor,"token 85");
        RewriteRuleTokenStream stream_86=new RewriteRuleTokenStream(adaptor,"token 86");
        RewriteRuleTokenStream stream_87=new RewriteRuleTokenStream(adaptor,"token 87");

        try {
            // gram/i.g:15:8: ( ( 'char' -> ^( DChar ) | 'int' -> ^( DInt ) | 'boolean' -> ^( DBoolean ) | 'float' -> ^( DFloat ) | 'void' -> ^( DVoid ) ) )
            // gram/i.g:15:10: ( 'char' -> ^( DChar ) | 'int' -> ^( DInt ) | 'boolean' -> ^( DBoolean ) | 'float' -> ^( DFloat ) | 'void' -> ^( DVoid ) )
            {
            // gram/i.g:15:10: ( 'char' -> ^( DChar ) | 'int' -> ^( DInt ) | 'boolean' -> ^( DBoolean ) | 'float' -> ^( DFloat ) | 'void' -> ^( DVoid ) )
            int alt1=5;
            switch ( input.LA(1) ) {
            case 84:
                {
                alt1=1;
                }
                break;
            case 85:
                {
                alt1=2;
                }
                break;
            case 86:
                {
                alt1=3;
                }
                break;
            case 87:
                {
                alt1=4;
                }
                break;
            case 88:
                {
                alt1=5;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 1, 0, input);

                throw nvae;
            }

            switch (alt1) {
                case 1 :
                    // gram/i.g:15:11: 'char'
                    {
                    string_literal1=(Token)match(input,84,FOLLOW_84_in_idTipo56);  
                    stream_84.add(string_literal1);



                    // AST REWRITE
                    // elements: 
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Tree)adaptor.nil();
                    // 15:18: -> ^( DChar )
                    {
                        // gram/i.g:15:21: ^( DChar )
                        {
                        Tree root_1 = (Tree)adaptor.nil();
                        root_1 = (Tree)adaptor.becomeRoot((Tree)adaptor.create(DChar, "DChar"), root_1);

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 2 :
                    // gram/i.g:15:32: 'int'
                    {
                    string_literal2=(Token)match(input,85,FOLLOW_85_in_idTipo66);  
                    stream_85.add(string_literal2);



                    // AST REWRITE
                    // elements: 
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Tree)adaptor.nil();
                    // 15:38: -> ^( DInt )
                    {
                        // gram/i.g:15:41: ^( DInt )
                        {
                        Tree root_1 = (Tree)adaptor.nil();
                        root_1 = (Tree)adaptor.becomeRoot((Tree)adaptor.create(DInt, "DInt"), root_1);

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 3 :
                    // gram/i.g:15:51: 'boolean'
                    {
                    string_literal3=(Token)match(input,86,FOLLOW_86_in_idTipo76);  
                    stream_86.add(string_literal3);



                    // AST REWRITE
                    // elements: 
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Tree)adaptor.nil();
                    // 15:61: -> ^( DBoolean )
                    {
                        // gram/i.g:15:64: ^( DBoolean )
                        {
                        Tree root_1 = (Tree)adaptor.nil();
                        root_1 = (Tree)adaptor.becomeRoot((Tree)adaptor.create(DBoolean, "DBoolean"), root_1);

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 4 :
                    // gram/i.g:15:78: 'float'
                    {
                    string_literal4=(Token)match(input,87,FOLLOW_87_in_idTipo86);  
                    stream_87.add(string_literal4);



                    // AST REWRITE
                    // elements: 
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Tree)adaptor.nil();
                    // 15:86: -> ^( DFloat )
                    {
                        // gram/i.g:15:89: ^( DFloat )
                        {
                        Tree root_1 = (Tree)adaptor.nil();
                        root_1 = (Tree)adaptor.becomeRoot((Tree)adaptor.create(DFloat, "DFloat"), root_1);

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 5 :
                    // gram/i.g:15:101: 'void'
                    {
                    string_literal5=(Token)match(input,88,FOLLOW_88_in_idTipo96);  
                    stream_88.add(string_literal5);



                    // AST REWRITE
                    // elements: 
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Tree)adaptor.nil();
                    // 15:108: -> ^( DVoid )
                    {
                        // gram/i.g:15:111: ^( DVoid )
                        {
                        Tree root_1 = (Tree)adaptor.nil();
                        root_1 = (Tree)adaptor.becomeRoot((Tree)adaptor.create(DVoid, "DVoid"), root_1);

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);

            retval.tree = (Tree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Tree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "idTipo"

    public static class tipo_return extends ParserRuleReturnScope {
        Tree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "tipo"
    // gram/i.g:18:1: tipo : ( INT -> ^( Int INT ) | FLOAT -> ^( Float FLOAT ) | CHAR -> ^( Char CHAR ) | boolean_ -> boolean_ ) ;
    public final iParser.tipo_return tipo() throws RecognitionException {
        iParser.tipo_return retval = new iParser.tipo_return();
        retval.start = input.LT(1);

        Tree root_0 = null;

        Token INT6=null;
        Token FLOAT7=null;
        Token CHAR8=null;
        iParser.boolean__return boolean_9 = null;


        Tree INT6_tree=null;
        Tree FLOAT7_tree=null;
        Tree CHAR8_tree=null;
        RewriteRuleTokenStream stream_FLOAT=new RewriteRuleTokenStream(adaptor,"token FLOAT");
        RewriteRuleTokenStream stream_CHAR=new RewriteRuleTokenStream(adaptor,"token CHAR");
        RewriteRuleTokenStream stream_INT=new RewriteRuleTokenStream(adaptor,"token INT");
        RewriteRuleSubtreeStream stream_boolean_=new RewriteRuleSubtreeStream(adaptor,"rule boolean_");
        try {
            // gram/i.g:18:6: ( ( INT -> ^( Int INT ) | FLOAT -> ^( Float FLOAT ) | CHAR -> ^( Char CHAR ) | boolean_ -> boolean_ ) )
            // gram/i.g:18:8: ( INT -> ^( Int INT ) | FLOAT -> ^( Float FLOAT ) | CHAR -> ^( Char CHAR ) | boolean_ -> boolean_ )
            {
            // gram/i.g:18:8: ( INT -> ^( Int INT ) | FLOAT -> ^( Float FLOAT ) | CHAR -> ^( Char CHAR ) | boolean_ -> boolean_ )
            int alt2=4;
            switch ( input.LA(1) ) {
            case INT:
                {
                alt2=1;
                }
                break;
            case FLOAT:
                {
                alt2=2;
                }
                break;
            case CHAR:
                {
                alt2=3;
                }
                break;
            case 126:
            case 127:
                {
                alt2=4;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }

            switch (alt2) {
                case 1 :
                    // gram/i.g:18:9: INT
                    {
                    INT6=(Token)match(input,INT,FOLLOW_INT_in_tipo117);  
                    stream_INT.add(INT6);



                    // AST REWRITE
                    // elements: INT
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Tree)adaptor.nil();
                    // 18:13: -> ^( Int INT )
                    {
                        // gram/i.g:18:16: ^( Int INT )
                        {
                        Tree root_1 = (Tree)adaptor.nil();
                        root_1 = (Tree)adaptor.becomeRoot((Tree)adaptor.create(Int, "Int"), root_1);

                        adaptor.addChild(root_1, stream_INT.nextNode());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 2 :
                    // gram/i.g:18:29: FLOAT
                    {
                    FLOAT7=(Token)match(input,FLOAT,FOLLOW_FLOAT_in_tipo129);  
                    stream_FLOAT.add(FLOAT7);



                    // AST REWRITE
                    // elements: FLOAT
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Tree)adaptor.nil();
                    // 18:35: -> ^( Float FLOAT )
                    {
                        // gram/i.g:18:38: ^( Float FLOAT )
                        {
                        Tree root_1 = (Tree)adaptor.nil();
                        root_1 = (Tree)adaptor.becomeRoot((Tree)adaptor.create(Float, "Float"), root_1);

                        adaptor.addChild(root_1, stream_FLOAT.nextNode());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 3 :
                    // gram/i.g:18:55: CHAR
                    {
                    CHAR8=(Token)match(input,CHAR,FOLLOW_CHAR_in_tipo141);  
                    stream_CHAR.add(CHAR8);



                    // AST REWRITE
                    // elements: CHAR
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Tree)adaptor.nil();
                    // 18:60: -> ^( Char CHAR )
                    {
                        // gram/i.g:18:63: ^( Char CHAR )
                        {
                        Tree root_1 = (Tree)adaptor.nil();
                        root_1 = (Tree)adaptor.becomeRoot((Tree)adaptor.create(Char, "Char"), root_1);

                        adaptor.addChild(root_1, stream_CHAR.nextNode());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 4 :
                    // gram/i.g:18:78: boolean_
                    {
                    pushFollow(FOLLOW_boolean__in_tipo153);
                    boolean_9=boolean_();

                    state._fsp--;

                    stream_boolean_.add(boolean_9.getTree());


                    // AST REWRITE
                    // elements: boolean_
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Tree)adaptor.nil();
                    // 18:87: -> boolean_
                    {
                        adaptor.addChild(root_0, stream_boolean_.nextTree());

                    }

                    retval.tree = root_0;
                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);

            retval.tree = (Tree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Tree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "tipo"

    public static class prog_return extends ParserRuleReturnScope {
        Tree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "prog"
    // gram/i.g:23:1: prog : ( programa )* EOF -> ^( SeqInstrucao ( programa )* ) ;
    public final iParser.prog_return prog() throws RecognitionException {
        iParser.prog_return retval = new iParser.prog_return();
        retval.start = input.LT(1);

        Tree root_0 = null;

        Token EOF11=null;
        iParser.programa_return programa10 = null;

